# mental_health

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
models/: gradient_boosting.pkl  logistic_regression.pkl
notebooks/: EDA.ipynb  modeling.ipynb
src/: data_loader.py  predict.py  preprocessing.py  tracking.py  train.py
tests/: conftest.py  test_data_loader.py  test_predict.py  test_preprocessing.py  test_tracking.py  test_train.py
